# proyecto-tfm

./: .gitignore  README.md  fodg_to_png.py  ght.py  head.xml  pyproject.toml  requirements.txt  setup.py  shape_detection.py
AI_PROJECT/: .gitignore  contour_relation.py  detect_and_relate.py  get_relation_metrics_with_classifier.py  get_relation_metrics_with_contours.py  inference_existent_model.py  load_dataset.py  perform_metrics.py  perform_metrics_classificator.py  perform_metrics_detector.py  test_detect_and_relate.py  train.py  train_custom_model.py  train_existent_model.py  train_object_detector.py  train_relational_classificator.py
AI_PROJECT/dataset/: dataset.py  load_dataset.py
AI_PROJECT/datasets/: dataset.py  detector_dataset.py  relational_classificator_dataset.py
AI_PROJECT/model/: existent_model.py  model.py  model_definition.py  utils.py
AI_PROJECT/models/: detector_definition.py  detector_functions.py  relational_classification_functions.py  relational_classification_model.py  utils.py
AI_PROJECT/relator/: follow_line_algorithm.py  read_bboxes.py  relation_metrics.py  (+1 more)
csv/: ent_atr.csv  rel_ent.csv
data_generator/: .gitignore  create_relation_data.py  fodg_to_png.py  from_yolo_2_project.py  generate_sintetic_data.py  head.xml
dataset/: fodg_to_png.py
deep_learning/: .gitignore  draw_models.py  perform_metrics_classificator.py  perform_metrics_detector.py  train_object_detector.py  train_relational_classificator.py  visualize_dataset.py
ght/: .gitignore  ght.py  shape_detection.py
utils/: ent_model_creator.py  ent_model_positions.py  globals.py  lexical_model.py  position_rules.py  read_csv.py  tools.py
visual_relation_detector/: contour_relation.py  detect_and_relate.py  get_relation_metrics_with_classifier.py  get_relation_metrics_with_contours.py
(+38 files in other folders)
