[project]
name = "tfm"
version = "0.1"
description = "Descripción del proyecto"
authors = [
    {name = "scabbed_wings", email = "scabbed.wings.demon@gmail.com"},
]
dependencies = [
    "setuptools>=75.8.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "Pillow==10.1.0",
    "colorama==0.4.6",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "filelock==3.9.0",
    "fonttools==4.46.0",
    "fsspec==2023.4.0",
    "graphviz==0.20.3",
    "imgkit==1.2.3",
    "importlib-resources==6.1.1",
    "intel-openmp==2021.4.0",
    "joblib==1.4.0",
    "kiwisolver==1.4.5",
    "lightning-utilities==0.11.2",
    "matplotlib==3.8.2",
    "mkl==2021.4.0",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.26.1",
    "opencv-python==4.8.1.78",
    "packaging==23.2",
    "pandas==2.1.1",
    "pycocotools==2.0.7",
    "pycparser==2.21",
    "pyparsing==3.1.1",
    "pytesseract==0.3.10",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "pyvips==2.2.1",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "six==1.16.0",
    "sympy==1.13.1",
    "tbb==2021.11.0",
    "threadpoolctl==3.4.0",
    "torch>=2.5.0",
    "torchaudio>=2.4.0",
    "torchmetrics==1.4.0.post0",
    "torchview==0.2.6",
    "torchvision>=0.19.0",
    "tqdm==4.66.4",
    "tzdata==2023.3",
    "zipp==3.17.0",
]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
Homepage = "https://github.com/scabbed-wings/proyecto-tfm"

[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "private"
url = "https://download.pytorch.org/whl/cu126"
include_packages = ["torch", "torchvision", "torchaudio"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
